src/components/app/App.css
.App {
  text-align: center;
  width: 90%;
  margin: auto;
  margin-top: 56px;
}

.App__wrapper {
  width: 80%;
  margin: auto;
}

@media (max-width: 768px) {
  .App__wrapper {
    width: 90%;
  }
}

@media (max-width: 500px) {
  .App__wrapper {
    width: 95%;
  }
}

